--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,24 @@
 version: '3.8'
 
 services:
-  # nestjs-todo-app:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: nestjs_todo_app
-  #   ports:
-  #     - '${PORT:-3000}:3000'
-  #   restart: unless-stopped
-  #   volumes:
-  #     - .:/app
-  #     - /app/node_modules
-  #   environment:
-  #     NODE_ENV: ${NODE_ENV:-production}
-  #   command: npm run start:prod
-  #   depends_on:
-  #     - nestjs-todo-db
+  nestjs-todo-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nestjs_todo_app
+    ports:
+      - '${PORT:-3000}:3000'
+    restart: unless-stopped
+    volumes:
+      # - .:/app
+      # - /app/node_modules
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    environment:
+      NODE_ENV: ${NODE_ENV:-production}
+    command: npm run start:dev
+    depends_on:
+      - nestjs-todo-db
 
   nestjs-todo-db:
     image: postgres:15-alpine
